frontend/src/styles/OneSpot.scss
.one-spot{
  width: 75%;
  max-width: 1020px;
  min-width: 540px;
  height: max-content;
  background-color: #ffffff;
  display: flex;
  flex-direction: column;
  margin: auto;
  margin-top: 3em;
  border-radius: 24px 24px 0 0 ;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  font-family: Roboto, Helvetica, sans-serif;
  font-size: 16px;

  // make container extend below the page 
  bottom: -20px;
  padding-bottom: 20px; 
}

.one-spot__header {
  display: flex;
  justify-content: space-between;
  width: 94%; //could use refactor, not sure why it's spilling over
  height: 370px;
  margin: 1.5em;
  gap: 1.5em;
}


.one-spot__map {
  width: 100%;
  max-width: 500px;
  min-width: 200px;
  height: 350px;
  flex: 0 0 40%;
}

.one-spot__create-visit {
  text-decoration: none;
  color: #FFFFFF;
  background-color: #F86204;
  border-radius: 9999px;
  padding: 0.5em 2.5em;
  align-self: flex-end;
  font-size: 14px;

}

.one-spot__header > div {
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 20px;
}

.one-spot__visits {
  width: 91.8%; //could use refactor, not sure why it's spilling over
  display: grid;
  grid-template-columns: repeat(3, 33.33%);
  grid-column-gap: 1em;
  grid-row-gap: 1em;
  margin: 1.5em;
}

